# personal-ai-telegram

./: .env.example  .gitignore  ENV_SETUP.md  README.md  pyproject.toml
docs/: openclaw-api-notes.md
docs/operations/: multiuser-oauth-setup.md  smoke-test.md
docs/reports/: 2026-05-19-openclaw-telegram-assistant-execution-report.md
docs/superpowers/plans/: 2026-05-19-multiuser-google-oauth.md  2026-05-19-openclaw-telegram-assistant.md  2026-05-20-calendar-cancel.md  2026-05-20-calendar-edit.md  2026-05-20-calendar-event-creation.md  2026-05-20-calendar-read-enhancement.md  (+2 more)
scripts/: run_local_dry_run.py
src/personal_hermes/: __init__.py  __main__.py  app.py  config.py  router.py  scheduler.py  users.py
tests/: test_app.py  test_config.py  test_create_event_routing.py  test_router.py  test_scheduler.py
tests/calendar/: test_availability.py  test_calendar_actions.py  test_calendar_edit.py  test_calendar_service.py  test_event_request.py  test_notifications.py
tests/e2e/: test_assistant_pipeline.py
tests/llm/: test_minimax.py
tests/mail/: test_gmail_capabilities.py  test_mail_polling.py  test_reply_actions.py  test_summarizer.py
tests/oauth/: test_crypto.py  test_google_oauth.py  test_web.py
tests/openclaw/: test_client_contract.py  test_create_calendar_event.py  test_delete_calendar_event.py  test_update_calendar_event.py
tests/storage/: test_pending_calendar_events.py  test_store.py
tests/telegram/: test_adapter_formatting.py  test_authorization.py  test_format_schedule.py  test_network_adapter.py
tests/users/: test_user_store.py
(+31 files in other folders)
