[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-hermes"
version = "0.1.0"
description = "Single-user Telegram assistant for Gmail and Google Calendar through OpenClaw."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10,<4",
    "httpx>=0.27,<1",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "python-telegram-bot>=21.0,<23",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
