[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "personal-hermes"
version = "0.1.0"
description = "Single-user Telegram assistant for Gmail and Google Calendar through OpenClaw."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "apscheduler>=3.10,<4",
    "cryptography>=42.0,<46",
    "fastapi>=0.111,<1",
    "google-api-python-client>=2.130,<3",
    "google-auth>=2.29,<3",
    "google-auth-oauthlib>=1.2,<2",
    "httpx>=0.27,<1",
    "pydantic-settings>=2.0,<3",
    "python-dotenv>=1.0,<2",
    "python-telegram-bot>=21.0,<23",
    "uvicorn>=0.29,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<10",
    "pytest-mock>=3.14,<4",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
